# GSC_Dashboard

./: .env  .gitignore  README.md  app.py  clear_database.py  gsc-dashboard.md  main.py  main1.py  pyproject.toml  requirements.txt  test.ipynb  update_to_turso.py
.github/workflows/: gsc-daily-clean.yml  gsc.yml  gsc_monthly.yml
scripts/: export_supabase_csv.py  extract_gsc.py
