[project]
name = "gsc-api-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "fastapi>=0.116.1",
    "google-api-python-client==2.110.0",
    "google-auth==2.25.2",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib==1.2.0",
    "libsql-client>=0.3.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
    "supabase>=2.10.0"
]
